# working-memo

./: .gitattributes  .gitignore  MemoApp.spec  WorkingMemo-macos.spec  WorkingMemo.spec  pyproject.toml  run.py
src/memo_app/: __init__.py  main.py  monitor.py  overlay.py  settings_dialog.py  settings_manager.py  sync_manager.py  todo_manager.py  updater.py
src/memo_app/db/: __init__.py  crud.py  database.py  models.py
